<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/txt_add_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_filters"/>

    <CheckBox
        android:id="@+id/cb_tyre_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_add_filter"
        android:text="@string/tyre_change"/>

    <CheckBox
        android:id="@+id/cb_oil_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_tyre_change"
        android:text="@string/oil_change"/>

    <CheckBox
        android:id="@+id/cb_battery_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_oil_change"
        android:text="@string/battery_change"/>

    <TextView
        android:id="@+id/txt_customer_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/cb_battery_change"
        android:text="@string/customer_rating"/>

    <SeekBar
        android:id="@+id/sb_customer_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_customer_rating"
        android:max="5"/>

    <TextView
        android:id="@+id/txt_distance_from_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sb_customer_rating"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/distance_from_me"/>

    <SeekBar
        android:id="@+id/sb_distance_from_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_distance_from_me"/>

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sb_distance_from_me"
        android:text="@string/filter"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
</RelativeLayout>